[2025-10-20] improve status code

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -244,10 +244,10 @@
                 <div class="description">Return response with specific HTTP status code (e.g., /status/404). Supports multiple HTTP methods.</div>
                 <div class="curl-examples">
                     <div class="curl-command">
-                        <span class="method-label">GET:</span>curl "http://localhost:5000/status/404"
+                        <span class="method-label">GET:</span>curl -L "http://localhost:5000/status/301"
                     </div>
                     <div class="curl-command">
-                        <span class="method-label">POST:</span>curl -X POST "http://localhost:5000/status/418"
+                        <span class="method-label">POST:</span>curl -X POST "http://localhost:5000/status/404"
                     </div>
                     <div class="curl-command">
                         <span class="method-label">PUT:</span>curl -X PUT "http://localhost:5000/status/200"
